--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
       <title> My first Page </title>
     </head>
   <body>
-    <h1> ampogi ko </h1>
+    <h1> Computer Science 3 </h1>
   </body>
 </html>
