--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <body>
     <h1> Computer Science 3 </h1>
     <p>Hello World! </p>
-    <p> P.S: Ang gwapo ng nag click ng "refresh". </p>
+    <p>Ampogi ni Sir Jimmy</p>
   </body>
 </html>
