--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <body>
     <h1> Computer Science 3 </h1>
     <p>Hello World! </p>
-    <p>Ampogi ni Sir Jimmy</p>
+    <h1>Ampogi ni Sir Jimmy</h1>
   </body>
 </html>
