--- a/AA2_Venus/home.html
+++ b/AA2_Venus/home.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		<h1>Noodles Flavor</h1>
+		<header><h1>Noodles Flavor</h1></header>
 		<div>
 			<section>
 				<article>
