--- a/Venus AA2/FA14_Venus.html
+++ b/Venus AA2/FA14_Venus.html
@@ -168,9 +168,9 @@ textarea:hover {
 				<br>
 				<label for="gender" id="gendernametag"> What is your gender: </label></br>
 				<select name="gender" id="gen" onblur= "onYes('gen')">
-					<option value="male"> Male </option>
-					<option value="female"> Female </option>
-					<option value="not"> Prefer not to mention </option>
+					<option value="Male"> Male </option>
+					<option value="Female"> Female </option>
+					<option value="Prefer not to mention"> Prefer not to mention </option>
 				</select>
 				<br><br>
 				<label for="email" id="emailnametag"> Email Address </label>
