--- a/Venus AA2/FA14_Venus.html
+++ b/Venus AA2/FA14_Venus.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+			<title>  </title> 
+	<meta charset="UTF-8">
+ 	<meta name="author" content="Joshua Dave D. Venus">
+ 	<meta name="keywords" content="HTML, CSS, JavaScript">
+	<meta name="revised" content="5-8-2023">
+ 	<link rel="icon" href="" type="image/gif">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
-	#legend {
+	#legend {   /* to edit the legend */
 	font-size: 20px;
 	text-align: center;
 	
 	}
 	
-#home {
+#home {  /* to edit the id "home" */
   font-family: Tahoma;
   background-image: url('cs.jpg');
   color: white;
@@ -23,7 +30,7 @@
   font-size: 13px;
 }
 
-#login {
+#login {   /* to edit the id "login" */
   width: 450px;
   margin: auto;
   position: absolute;
@@ -31,7 +38,7 @@
   border-radius: 10px 20px 10px 20px;
 }
 
-	#welcome {
+	#welcome {   /* to edit the id "welcome" */
 	text-align:center;
 	background-color: rgb(60,60,60);
 	color:white;
@@ -42,7 +49,7 @@
 	color:black;
 	}
 		
-	input[type=reset] {
+	input[type=reset] {  /* to design the reset button */
   background-color: #e74c3c; 
   color: #fff;
   border: none; 
@@ -53,7 +60,7 @@
   transition: all 0.3s ease-in-out; 
 }
 
-	input[type=submit] {
+	input[type=submit] {   /* to design the submit button */
   background-color: #e74c3c; 
   color: #fff;
   border: none; 
@@ -66,7 +73,7 @@
 
 /* Hover effect */
 input[type=reset]:hover {
-  background-color: #c0392b; /* Change the background color on hover */
+  background-color: #c0392b; /* change the background color on hover */
 }
 
 /* Targeting form elements */
@@ -76,19 +83,19 @@ textarea {
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  transition: border-color 0.3s ease-in-out; /* Add a transition effect */
+  transition: border-color 0.3s ease-in-out; /* add a transition effect */
 }
 
 /* Hover effect */
 input[type=submit]:hover {
-  background-color: #2980b9; /* Change the background color on hover */
+  background-color: #2980b9; /* change the background color on hover */
 }
 
 /* Hover effect */
 input[type=text]:hover,
 input[type=email]:hover,
 textarea:hover {
-  border-color: #3498db; /* Change the border color on hover */
+  border-color: #3498db; /* change the border color on hover */
 }
 
 	#name {
@@ -204,7 +211,7 @@ textarea:hover {
 	</div>
 		<script>
 		
-function onYes(id) {
+function onYes(id) {   // so that when the user inputs, the border will turn green, but if not, it will turn red //
   var x = document.getElementById(id).value;
 
   if (x == "") {
@@ -214,7 +221,7 @@ function onYes(id) {
   }
 }
 
-function huhu() {
+function huhu() {   // to reset all //
   document.getElementById("name").style.border = "1px solid black";
   document.getElementById("userName").style.border = "1px solid black";
   document.getElementById("pWord").style.border = "1px solid black";
@@ -231,7 +238,7 @@ function huhu() {
   	document.getElementById("output").innerHTML = "";
 }
 
-function results(event) {
+function results(event) {  // to check if a form or more is missed //
   event.preventDefault();
 
   // get the values of the required fields
@@ -244,11 +251,11 @@ function results(event) {
   var interest = document.getElementById("interest").value.trim();
   var check = false;
   
-  // check if any of the required fields are empty
+  // check if any of the required fields are empty //
   if (name === "" || userName === "" || pWord === "" || emailAddress === "" || address === "" || gen === "" || interest == "") {
     alert("Please fill in all the required fields or enter a valid email address.");
   } else {
-    // display the user's information
+    // display the user's information //
     document.getElementById("nameValue").innerHTML = name;
     document.getElementById("userNameValue").innerHTML = userName;
     document.getElementById("genderValue").innerHTML = gen;
