--- a/Venus AA2/FA14_Venus.html
+++ b/Venus AA2/FA14_Venus.html
@@ -9,13 +9,13 @@
  	<link rel="icon" href="" type="image/gif">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
-	#legend {   /* to edit the legend */
+	#legend {   
 	font-size: 20px;
 	text-align: center;
 	
 	}
 	
-#home {  /* to edit the id "home" */
+#home {  
   font-family: Tahoma;
   background-image: url('cs.jpg');
   color: white;
@@ -30,7 +30,7 @@
   font-size: 13px;
 }
 
-#login {   /* to edit the id "login" */
+#login {   
   width: 450px;
   margin: auto;
   position: absolute;
@@ -38,7 +38,7 @@
   border-radius: 10px 20px 10px 20px;
 }
 
-	#welcome {   /* to edit the id "welcome" */
+	#welcome {   
 	text-align:center;
 	background-color: rgb(60,60,60);
 	color:white;
@@ -49,7 +49,7 @@
 	color:black;
 	}
 		
-	input[type=reset] {  /* to design the reset button */
+	input[type=reset] {  
   background-color: #e74c3c; 
   color: #fff;
   border: none; 
@@ -60,7 +60,7 @@
   transition: all 0.3s ease-in-out; 
 }
 
-	input[type=submit] {   /* to design the submit button */
+	input[type=submit] {   
   background-color: #e74c3c; 
   color: #fff;
   border: none; 
@@ -71,27 +71,23 @@
   transition: all 0.3s ease-in-out;
 }
 
-/* Hover effect */
 input[type=reset]:hover {
-  background-color: #c0392b; /* change the background color on hover */
+  background-color: #c0392b; 
 }
 
-/* Targeting form elements */
 input[type=text],
 input[type=email],
 textarea {
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  transition: border-color 0.3s ease-in-out; /* add a transition effect */
+  transition: border-color 0.3s ease-in-out; 
 }
 
-/* Hover effect */
 input[type=submit]:hover {
   background-color: #2980b9; /* change the background color on hover */
 }
 
-/* Hover effect */
 input[type=text]:hover,
 input[type=email]:hover,
 textarea:hover {
