--- a/Quarter4_Venus_Kerstine_Balce/Q4_SA_Venus_Fuentes_Balce.html
+++ b/Quarter4_Venus_Kerstine_Balce/Q4_SA_Venus_Fuentes_Balce.html
@@ -885,11 +885,16 @@ function huhu() {
 		document.getElementById("correct18").innerHTML = "";
 		document.getElementById("correct19").innerHTML = "";
 		document.getElementById("correct20").innerHTML = "";
-		document.getElementById("answer16").innerHTML = "";
-		document.getElementById("answer17").innerHTML = "";
-		document.getElementById("answer18").innerHTML = "";
-		document.getElementById("answer19").innerHTML = "";
-		document.getElementById("answer20").innerHTML = "";
+		document.getElementById("correct16").innerHTML = "";
+		document.getElementById("correct17").innerHTML = "";
+		document.getElementById("correct18").innerHTML = "";
+		document.getElementById("correct19").innerHTML = "";
+		document.getElementById("correct20").innerHTML = "";
+		document.getElementById("answer16").value = "";
+		document.getElementById("answer17").value = "";
+		document.getElementById("answer18").value = "";
+		document.getElementById("answer19").value = "";
+		document.getElementById("answer20").value = "";
       var radioButtons = document.querySelectorAll('input[type="radio"]');
       radioButtons.forEach(function(button) {
         button.checked = false;
